--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -70,6 +70,16 @@ a:focus{
 	}
 }
 
+.shadow{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 431px;
+	z-index: -1;
+	background: url(../img/shadow.png);
+}
+
 .fixed-col:after{
 	background: #fff;
 	background: rgba(255, 255, 255, 0.85);
@@ -160,7 +170,7 @@ a:focus{
 }
 
 .portfolio-categories .page-header{
-	margin-top: 20px;
+	margin-top: 40px;
 	text-transform: uppercase;
 	border-bottom: none;
 }
@@ -239,13 +249,7 @@ a:focus{
 
 @media (min-width: @screen-sm-min)  {
 
-	.portfolio .top-nav .navbar-toggle{
-		display: none;
-	}
 
-	.portfolio .top-nav .navbar-toggle{
-		display: none;
-	}
 
 	.portfolio-categories .col-md-3{ 
 		max-width: none;
@@ -368,16 +372,6 @@ a:focus{
 		width: 100%;
 	}
 
-	.shadow{
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 431px;
-		z-index: -1;
-		background: url(../img/shadow.png);
-	}
-
 	.team-imgs .headshot{
 		float: right;
 		width: 31.3%;
@@ -399,15 +393,18 @@ a:focus{
 	}
 
 	.experience{
-		display: block;
+		display: inline-block;
 		color: #fff;
 		position: fixed;
 		height: 30px;
-		width: 220px;
+		
 		margin: -50px 0 0 0px;
 		bottom: -50px;
-		left: 15px;
+		left: 42px;
 		border-top: 1px solid #fff;
+		h4{
+			font-size: 16px;
+		}
 	}
 
 	.finish-animate .experience{
