Got basic styling done for arrow on boxer

--- a/wp-content/themes/roots-master/assets/less/_boxer.less
+++ b/wp-content/themes/roots-master/assets/less/_boxer.less
@@ -208,25 +208,25 @@
 #boxer .boxer-meta {
   clear: both;
 }
-#boxer .boxer-control {
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  top: 0;
-  background: #ffffff;
-  border-radius: 100%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  opacity: 1;
-  overflow: hidden;
-  text-indent: 200%;
-  -webkit-transition: opacity 0.15s linear;
-          transition: opacity 0.15s linear;
-  white-space: nowrap;
-}
+// #boxer .boxer-control {
+//   width: 40px;
+//   height: 40px;
+//   position: absolute;
+//   top: 0;
+//   background: #ffffff;
+//   border-radius: 100%;
+//   box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+//   cursor: pointer;
+//   display: block;
+//   margin-right: auto;
+//   margin-left: auto;
+//   opacity: 1;
+//   overflow: hidden;
+//   text-indent: 200%;
+//   -webkit-transition: opacity 0.15s linear;
+//           transition: opacity 0.15s linear;
+//   white-space: nowrap;
+// }
 #boxer .boxer-control:before {
   width: 0;
   height: 0;
@@ -242,19 +242,19 @@
   left: 20px;
 }
 #boxer .boxer-control.previous:before {
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-right: 10.4px solid #333333;
-  margin-left: 14px;
+  // border-top: 8px solid transparent;
+  // border-bottom: 8px solid transparent;
+  // border-right: 10.4px solid #333333;
+  // margin-left: 14px;
 }
 #boxer .boxer-control.next {
   right: 20px;
 }
 #boxer .boxer-control.next:before {
-  border-top: 8px solid transparent;
-  border-bottom: 8px solid transparent;
-  border-left: 10.4px solid #333333;
-  margin-right: 14px;
+  // border-top: 8px solid transparent;
+  // border-bottom: 8px solid transparent;
+  // border-left: 10.4px solid #333333;
+  // margin-right: 14px;
 }
 #boxer .boxer-control.disabled {
   opacity: 0;
@@ -344,7 +344,7 @@
 #boxer.mobile .boxer-control {
   width: 50px;
   height: 100%;
-  background: #111111;
+  //background: #111111;
   border-radius: 0;
   box-shadow: none;
   opacity: 1;
@@ -359,10 +359,10 @@
 #boxer.mobile .boxer-control.next {
   right: 0;
 }
-#boxer.mobile .boxer-control.next:before {
-  border-left-color: #eeeeee;
-  margin-right: 19px;
-}
+// #boxer.mobile .boxer-control.next:before {
+//   border-left-color: #eeeeee;
+//   margin-right: 19px;
+// }
 .no-touch #boxer.mobile .boxer-control,
 .no-touch #boxer.mobile:hover .boxer-control {
   opacity: 1;
