--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -157,6 +157,10 @@ html, body{
 
 
 @media (min-width: @screen-sm-min)  {
+	
+	.portfolio .top-nav .navbar-toggle{
+		display: none;
+	}
 
 	.hide-overflow{
 		border: none;
@@ -277,6 +281,9 @@ html, body{
 }
 
 @media (min-width: @screen-md-min)  {
+	.portfolio .top-nav .navbar-toggle{
+		display: block;
+	}
 	.hide-overflow{
 		display: none;
 	}
