--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -240,6 +240,7 @@ a:focus{
 	margin-bottom: (@grid-gutter-width/2);
 	max-width: 430px;	
 	h4{
+		font-size: 16px;
 		position: absolute;
 		bottom: 5px;
 		left: @grid-gutter-width;
