--- a/wp-content/themes/roots-master/assets/less/_boxer.less
+++ b/wp-content/themes/roots-master/assets/less/_boxer.less
@@ -311,7 +311,7 @@
   left: 0;
   background: #111111;
   border-radius: 0;
-  padding: 40px 0 0;
+  padding: 0 0 0;
 }
 #boxer.mobile .boxer-close,
 #boxer.mobile .boxer-close:hover {
@@ -376,9 +376,8 @@
   width: 100%;
   position: absolute;
   right: 0;
-  bottom: 0;
+  top:0;
   left: 0;
-  background-color: #111111;
   padding: 15px 65px;
 }
 #boxer.mobile .boxer-position {
