--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -1,6 +1,6 @@
 body{
 	font-family: @font-family-sans-serif;
-	background-color: #000;
+	background-color: #fff;
 }
 body.portfolio, body.category{
 	background-color: #fff;
@@ -366,6 +366,17 @@ a:focus{
 
 
 @media (min-width: @screen-sm-min)  {
+	body{
+		background-color: #000;
+	}
+	body.portfolio, body.category{
+		background-color: #fff;
+	}
+
+	.mobile-img{
+		display: none;
+	}
+
 	.category-thumbs .blank{
 		display: block;
 	}
