--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -159,6 +159,9 @@ html, body{
 
 @media (min-width: @screen-sm-min)  {
 	.hide-overflow{
+		padding-bottom: 0;
+	}
+	.hide-overflow{
 		min-height: 0;
 	}
 	
