--- a/wp-content/themes/roots-master/assets/less/_boxer.less
+++ b/wp-content/themes/roots-master/assets/less/_boxer.less
@@ -393,6 +393,8 @@
   padding: 0;
 }
 #boxer.mobile .boxer-image {
+  position: absolute; 
+  bottom: 0;
   -webkit-transition: none !important;
           transition: none !important;
   -webkit-transform: translate(0, 0);
