added new phase to homepage animation

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -437,10 +437,8 @@ a:focus{
 	.home .navbar-brand{
 		display: block;
 	}
-	.celebrate{
-		display: none;
-	}
-	.logo{
+
+	.logo, .celebrate{
 		display: block;
 		position: fixed;
 		width: 100%;
@@ -643,6 +641,10 @@ a:focus{
 
 	.animate .logo{
 		.opacity(1);	
+	}
+	
+	.show-celebrate .celebrate{
+		.opacity(1);
 	}
 
 	.portfolio-dropdown{
