moved boxer styles to seperate style sheet

--- a/wp-content/themes/roots-master/assets/less/_boxer.less
+++ b/wp-content/themes/roots-master/assets/less/_boxer.less
@@ -1,3 +1,21 @@
+.boxer-control{
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 20px;  
+  height: 100%;
+  top: 0px;
+  position: fixed;
+}
+.boxer-control.next{
+  right: 0;
+  background-image: url(../img/next.png);
+}
+
+.boxer-control.previous{
+  left: 0;
+  background-image: url(../img/previous.png);
+}
+
 .boxer-lock {
   overflow: hidden !important;
 }
