added seperate style sheets

--- a/wp-content/themes/roots-master/assets/less/main.less
+++ b/wp-content/themes/roots-master/assets/less/main.less
@@ -9,8 +9,10 @@
 @import "_variables"; 
 
 // Roots
-@import "_global";                   // Base styling & custom mixins
-@import "_navbar";                   // Base styling & custom mixins
+@import "_global";                   // Global styles
+@import "_navbar";                   // Navbar and header
+@import "_home";                   	// Homepage specific
+@import "_portfolio";                 // Portfolio specific
 @import "_background-slide";         // Base styling & custom mixins
 @import "_boxer";         // Base styling & custom mixins
 @import "components/_buttons";       // Button tweaks
