--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -43,21 +43,12 @@ html, body{
 
 .top-nav li.dropdown
 {
-	// li{
-
-	// 	.opacity(0);
-	// 	.transition(opacity 0.4s ease);
-	// }
-
 	min-height: 142px;
 	ul{
 		display: none;	
 	}
 } 
 
-// .top-nav .dropdown-menu.open li{
-// 	.opacity(1);
-// }
 
 .navbar-default .navbar-nav .open .dropdown-menu > li > a {
 	color: #fff;
@@ -332,9 +323,7 @@ html, body{
 		.opacity(0);
 	}
 
-	
-
-	.finish-animate .top-nav .navbar-brand{
+	.animate-3 .top-nav .navbar-brand{
 		.opacity(1);
 		top: 44px;
 		.transition(opacity 2.0s ease);
