renamed animation classes

--- a/wp-content/themes/roots-master/assets/less/_home.less
+++ b/wp-content/themes/roots-master/assets/less/_home.less
@@ -55,8 +55,11 @@
 		}
 	}
 
-	.celebrate img{
-		width: 850px;
+	.celebrate{
+		display: block; 
+		img{
+			width: 850px;
+		}
 	}
 
 	.experience{
@@ -73,7 +76,7 @@
 		}
 	}
 
-	.finish-animate .experience{
+	.animate-3 .experience{
 		bottom: 15px;
 		.transition(bottom 2.8s ease);
 	}
@@ -83,11 +86,11 @@
 		.transition(opacity 2.0s ease);
 	}
 
-	.animate .logo{
+	.animate-1 .logo{
 		.opacity(1);	
 	}
 	
-	.show-celebrate .celebrate{
+	.animate-2 .celebrate{
 		.opacity(1);
 	}
 
