Fixed weird problem with shadow repeat

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -140,7 +140,8 @@ a:focus{
 	width: 100%;
 	height: 431px;
 	z-index: -1;
-	background: url(../img/shadow.png);
+	background-image: url(../img/shadow.png);
+	background-repeat: repeat-x;
 }
 
 .fixed-col:after{
