seperated team css

--- a/wp-content/themes/roots-master/assets/less/_global.less
+++ b/wp-content/themes/roots-master/assets/less/_global.less
@@ -149,57 +149,8 @@ a:focus{
 	background: rgba(255, 255, 255, 0.85);
 }
 
-.team-container{
-	padding-right: 0;
-	padding-left: 0;
-}
-.team-imgs{
-	position: relative;
-	left: -1px;
-	top: -10px;
-	clear: both;
-}
-.team-imgs .headshot{
-	position: relative;
-	background: @brand-primary;
-	padding-left: 0;
-	padding-right: 0;
-	display: table;
-	img{
-		.opacity(1);
-		.transition(opacity 0.4s ease);
-		-webkit-backface-visibility: hidden;
-    	-webkit-transform: translateZ(0) scale(1.0, 1.0);
-		width: 100%;
-	}
-}
-
-.team-imgs .name{
-	color: #fff;
-	z-index: 10;
-	position: absolute;
-	bottom: 5px;
-	left: 10px;
-	.opacity(0);
-	.transition(opacity 0.4s ease);
-	h4{
-		margin:0;
-		font-family: @font-family-sans-serif;
-	}
-}
-
-.team-imgs a:hover{
-	.name{
-		.opacity(1);
-	}
-	img{
-		.opacity(0.5);
-	}
-}
-
-.team-back{
-	margin:20px 0;
-	font-size: @font-size-h4;
+.black{
+	background-color: #000;
 }
 
 .career h5{
@@ -419,6 +370,17 @@ a:focus{
 	display: none;
 }
 
+.home footer{
+	display: none;
+}
+
+footer{
+	background-color: rgba(0, 0, 0, 0.5);
+	text-transform: uppercase;
+	color: #fff;
+	padding: 25px;
+}
+
 @media (min-width: @screen-sm-min)  {
 	body{
 		background-color: #000;
@@ -548,19 +510,6 @@ a:focus{
 		width: 100%;
 	}
 	
-	.team-imgs{
-		left: 39px;
-		.headshot{
-			width: 31.3%;
-			img{
-				width: 100%;
-				position: relative;
-			}
-		}
-		.headshot-7{
-			margin-left: 31.3%;
-		}
-	}
 
 	.page.fixed-col{
 		padding-bottom: 50px;
@@ -571,9 +520,7 @@ a:focus{
 	}
 }
 @media (min-width: @screen-lg-min)  {
-	.team-imgs{
-		left: 47px;
-	}
+	
 	.wrap{
 		width: @container-lg;
 	}
