--- a/wp-content/themes/roots-master/assets/less/_navbar.less
+++ b/wp-content/themes/roots-master/assets/less/_navbar.less
@@ -235,7 +235,7 @@ html, body{
 	
 	.top-nav .navbar-default{
 		z-index: 10;
-		background-color: #333;
+		background-color: #000;
 		border-bottom: none;
 		.navbar-toggle:hover{
 			color: @brand-primary;
@@ -264,7 +264,7 @@ html, body{
 		display: inline-block;
 		padding-top: 0;
 		padding-bottom: 22px;
-		color: #777777;
+		color: #fff;
 	}
 	.top-nav .navbar-right{
 		float: right !important;
