--- a/wp-content/themes/roots-master/assets/less/main.less
+++ b/wp-content/themes/roots-master/assets/less/main.less
@@ -13,6 +13,7 @@
 @import "_navbar";                   // Navbar and header
 @import "_home";                   	// Homepage specific
 @import "_portfolio";                 // Portfolio specific
+@import "_team";                 // Portfolio specific
 @import "_background-slide";         // Base styling & custom mixins
 @import "_boxer";         // Base styling & custom mixins
 @import "components/_buttons";       // Button tweaks
